# Python-Orbital-Mechanics-Tools

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/: __init__.py  bodies.py  constants.py  maneuvers.py  rockets.py  solar_system.py  units.py
src/orbital_mechanics/: __init__.py  bodies.py  constants.py  elements.py  maneuvers.py  orbit.py  rockets.py  solar_system.py  utils.py
tests/: conftest.py  test_bodies.py  test_orbit.py  test_rockets.py
